--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 #+TITLE: Lecturas del Grupo de Lógica Computacional
 #+OPTIONS: ^:nil
 
+#+NAME: Inicio
 Este repositorio es una recopilación de lecturas compartidas en la lista
 de correo del [[http://www.glc.us.es][grupo de lógica computacional]]. La recopilación está
 ordenada por la fecha de su publicación en la lista. Al final de cada
