--- a/README.org
+++ b/README.org
@@ -16,6 +16,9 @@ contenido.
 
 ** Enero de 2020
 
+*** 23-Ene-20
++ [[https://argumatronic.com/posts/1970-01-01-beginners.html][For beginners]]. ~ Julie Moronuki (@argumatronic). #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2001.08133][Drawing Prolog search trees: A manual for teachers and students of logic programming]]. ~ Johan Bos. #Prolog #LogicProgramming
 *** 22-Ene-20
 + [[https://youtu.be/HKrIMvC4xTA][Verified programming of Turing machines in Coq]]. ~ Fabian Kunze. #ITP #Coq
 + [[https://youtu.be/EipOEWKlSBQ][Proof pearl: Braun trees]]. ~ Tobias Nipkow. #ITP #IsabelleHOL
